--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           // optional settings if you want github search
           ditto.github_username = "mumuy";   // <------- EDIT ME!!
           ditto.github_repo = "notes";       // <------- EDIT ME!!
-          ditto.highlight_code = false;    // <------- EDIT ME!!
+          ditto.highlight_code = true;    // <------- EDIT ME!!
 
           // where the docs are actually stored on github - so you can edit
           // e.g. https://github.com/chutsu/ditto/edit/gh-pages
