--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 
     <!-- DITTO CSS -->
     <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
+    <style>
+      #content pre code{
+        word-break: break-all;
+      }
+    </style>
     <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
 </head>
 <body>
