--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
           ditto.run();
         });
     </script>
+    <div style="display: none;">
+        <script src="http://s95.cnzz.com/z_stat.php?id=1258310068&web_id=1258310068"></script>
+    </div>
 </body>
 </html>
